# off-simple

./: .gitignore  README.md  off-simple.cabal
Graphics/Formats/OFF/: Simple.hs
tests/: Main.hs  TestData.hs  off-simple-tests.cabal
tests/samples/: cube.off  cube.offc  dodec.off  mushroom.off  tetra.off  tetra.offc
